# CCopy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  坚果流量
.github/workflows/: build.yml  release.yml
.trae/rules/: project_rules.md
docs/plans/: 2026-07-20-webdav-sync-design.md
packager/: CCopy.nsi  IconGen.cs  installer.nsi  nsis-uninstall.nsh
src/: autostart.rs  categories.rs  clipboard_history.rs  clipboard_item.rs  common.rs  drag.rs  filter.rs  hotkey.rs  main.rs  platform.rs  settings.rs  storage.rs  tray.rs  updater.rs
src/sync/: config.rs  event.rs  merge.rs  mod.rs  webdav.rs
src/ui/: main.slint  mod.rs  settings.slint
