[package]
name = "ccopy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[dependencies]
chrono = "0.4.45"
clipboard-rs = { version = "0.3.4", features = ["image"] }
global-hotkey = "0.8.0"
mouse_position = "0.1.4"
raw-window-handle = "0.6"
rusqlite = { version = "0.37.0", features = ["bundled"] }
slint = { version = "1.16.1", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg", "std", "raw-window-handle-06", "live-preview"] }
tray-icon = "0.24.1"
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
slint-build = "1.16.1"